--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
 # Angular specific
 /dist/
 /out-tsc/
@@ -7,8 +15,15 @@
 /.angular/
 .angular/
 
-# Node modules and dependency files
-/node_modules/
+# Node
+/btmetacrit/node_modules
+
+/node_modules
+
+~/btmetacrit/node_modules
+
+./btmetacrit/node_modules
+
 /package-lock.json
 /yarn.lock
 
@@ -26,3 +41,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
